// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterTabs tests FilterTabs render FilterTabs renders correctly when genres are null 1`] = `
<div
  className="container"
>
  <a
    href="/?filter=Trending"
    onClick={[Function]}
  >
    <button
      className="tab active"
      data-filter="Trending"
      onClick={[Function]}
      type="button"
    >
      Trending
    </button>
  </a>
  <a
    href="/?filter=Top Rated"
    onClick={[Function]}
  >
    <button
      className="tab"
      data-filter="Top Rated"
      onClick={[Function]}
      type="button"
    >
      Top Rated
    </button>
  </a>
  <a
    href="/?filter=Coming soon"
    onClick={[Function]}
  >
    <button
      className="tab"
      data-filter="Coming soon"
      onClick={[Function]}
      type="button"
    >
      Coming soon
    </button>
  </a>
  <select
    className="select"
    defaultValue="Genre"
    name="Genre"
    onChange={[Function]}
  >
    <option
      disabled={true}
      hidden={true}
      value="Genre"
    >
      Genre
    </option>
  </select>
</div>
`;

exports[`FilterTabs tests FilterTabs render FilterTabs renders correctly when genres tab active 1`] = `
<div
  className="container"
>
  <a
    href="/?filter=Trending"
    onClick={[Function]}
  >
    <button
      className="tab"
      data-filter="Trending"
      onClick={[Function]}
      type="button"
    >
      Trending
    </button>
  </a>
  <a
    href="/?filter=Top Rated"
    onClick={[Function]}
  >
    <button
      className="tab"
      data-filter="Top Rated"
      onClick={[Function]}
      type="button"
    >
      Top Rated
    </button>
  </a>
  <a
    href="/?filter=Coming soon"
    onClick={[Function]}
  >
    <button
      className="tab"
      data-filter="Coming soon"
      onClick={[Function]}
      type="button"
    >
      Coming soon
    </button>
  </a>
  <select
    className="select active"
    defaultValue="123"
    name="Genre"
    onChange={[Function]}
  >
    <option
      disabled={true}
      hidden={true}
      value="Genre"
    >
      Genre
    </option>
    <option
      value={0}
    >
      drama
    </option>
    <option
      value={1}
    >
      crime
    </option>
    <option
      value={2}
    >
      detective
    </option>
  </select>
</div>
`;

exports[`FilterTabs tests FilterTabs render FilterTabs renders correctly when trending tab active 1`] = `
<div
  className="container"
>
  <a
    href="/?filter=Trending"
    onClick={[Function]}
  >
    <button
      className="tab active"
      data-filter="Trending"
      onClick={[Function]}
      type="button"
    >
      Trending
    </button>
  </a>
  <a
    href="/?filter=Top Rated"
    onClick={[Function]}
  >
    <button
      className="tab"
      data-filter="Top Rated"
      onClick={[Function]}
      type="button"
    >
      Top Rated
    </button>
  </a>
  <a
    href="/?filter=Coming soon"
    onClick={[Function]}
  >
    <button
      className="tab"
      data-filter="Coming soon"
      onClick={[Function]}
      type="button"
    >
      Coming soon
    </button>
  </a>
  <select
    className="select"
    defaultValue="Genre"
    name="Genre"
    onChange={[Function]}
  >
    <option
      disabled={true}
      hidden={true}
      value="Genre"
    >
      Genre
    </option>
    <option
      value={0}
    >
      drama
    </option>
    <option
      value={1}
    >
      crime
    </option>
    <option
      value={2}
    >
      detective
    </option>
  </select>
</div>
`;
